--- a/.github/workflows/release-workflow.yaml
+++ b/.github/workflows/release-workflow.yaml
@@ -7,7 +7,7 @@ on:
       - '.github/workflows/release-workflow.yaml'
       - 'pom.xml'
   push:
-    branches: [ main, feature/github-actions ]
+    branches: [ main ]
     paths:
       - 'src/**'
       - '.github/workflows/release-workflow.yaml'
@@ -34,7 +34,7 @@ jobs:
           cache: maven
 
       - name: Build with Maven
-        run: mvn -B package --file pom.xml
+        run: mvn -B package --file pom.xml -DskipTests
 
       - name: Cache JAR File
         id: artifact-upload
@@ -45,6 +45,9 @@ jobs:
           retention-days: 1
 
   docker-build:
+    needs:
+      - project-build
+
     runs-on: ubuntu-latest
 
     permissions:
@@ -77,6 +80,9 @@ jobs:
         uses: docker/metadata-action@v5
         with:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+          flavor: |
+            latest=true
+            sha=false
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
@@ -98,3 +104,9 @@ jobs:
           subject-name: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME}}
           subject-digest: ${{ steps.push.outputs.digest }}
           push-to-registry: true
+
+      - name: Remove untagged images
+        uses: dataaxiom/ghcr-cleanup-action@v1
+        with:
+          delete-untagged: true
+          token: ${{ secrets.GITHUB_TOKEN }}
