--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -59,3 +59,11 @@ spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 # Control schema creation and initialization
 spring.jpa.generate-ddl=true
 spring.jpa.defer-datasource-initialization=true
+# Flyway
+spring.flyway.url=jdbc:postgresql://${DB_HOST}}/${DB_DATABASE}
+spring.flyway.user=${DB_USER}
+spring.flyway.password=${DB_PASSWORD}
+spring.flyway.sql-migration-prefix=V
+spring.flyway.repeatable-sql-migration-prefix=R
+spring.flyway.sql-migration-separator=__
+spring.flyway.sql-migration-suffixes=.sql
