- Update backend image to v1.0.0 - Change pom.xml version to 1.0.0+11 - Add GitHub clean workflow - Modify release workflow triggers

--- a/.github/workflows/release-workflow.yaml
+++ b/.github/workflows/release-workflow.yaml
@@ -1,14 +1,7 @@
 name: FlavorMate server build workflow
 on:
-  pull_request:
-    branches: [ main ]
-    paths:
-      - 'src/**'
-      - '.github/workflows/release-workflow.yaml'
-      - 'pom.xml'
   push:
     tags: [ v* ]
-    branches: [ main ]
 
 env:
   REGISTRY: ghcr.io
@@ -77,8 +70,10 @@ jobs:
         uses: docker/metadata-action@v5
         with:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
-          flavor: |
-            latest=true
+          tags: |
+            type=semver,pattern={{version}}
+            type=semver,pattern={{major}}.{{minor}}
+            type=semver,pattern={{major}}
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
