- Add backup file path property

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 # FlavorMate Config
 flavorMate.files=${FLAVORMATE_DATA_PATH:file:${user.home}/.flavormate/files}
+flavorMate.files-backup=${FLAVORMATE_BACKUP_PATH:file:${user.home}/.flavormate/backup}
 flavorMate.base.backend=${FLAVORMATE_BACKEND_URL}${FLAVORMATE_PATH:}
 flavorMate.base.frontend=${FLAVORMATE_FRONTEND_URL:}
 flavorMate.app.version=@project.version@
