--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,11 @@ flavorMate.base.frontend=${FLAVORMATE_FRONTEND_URL:}
 flavorMate.app.version=@project.version@
 flavorMate.highlight.days=${FLAVORMATE_HIGHLIGHT_COUNT:14}
 flavorMate.mail.from=${MAIL_FROM}
+## Features
+flavormate.features.registration.enabled=false
+flavormate.features.recovery.enabled=true
+flavormate.features.import-export.enabled=false
+flavormate.features.share-recipes.enabled=false
 ## Admin Config
 flavorMate.admin.username=${FLAVORMATE_ADMIN_USERNAME}
 flavorMate.admin.displayname=${FLAVORMATE_ADMIN_DISPLAYNAME}
