--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -60,9 +60,11 @@ spring.mail.host=
 spring.datasource.url=jdbc:postgresql://${DB_HOST}/${DB_DATABASE}
 spring.datasource.username=${DB_USER}
 spring.datasource.password=${DB_PASSWORD}
-spring.jpa.hibernate.ddl-auto=update
-#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
-# Control schema creation and initialization
-spring.jpa.generate-ddl=true
-spring.jpa.defer-datasource-initialization=true
+# FlyWay
+spring.flyway.sql-migration-prefix=V
+spring.flyway.repeatable-sql-migration-prefix=R
+spring.flyway.sql-migration-separator=__
+spring.flyway.sql-migration-suffixes=.sql
+spring.flyway.baseline-on-migrate=true
