--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -63,8 +63,6 @@ spring.datasource.password=${DB_PASSWORD}
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 # FlyWay
-spring.flyway.sql-migration-prefix=V
-spring.flyway.repeatable-sql-migration-prefix=R
-spring.flyway.sql-migration-separator=__
-spring.flyway.sql-migration-suffixes=.sql
 spring.flyway.baseline-on-migrate=true
+spring.flyway.validateMigrationNaming=true
+spring.flyway.placeholders.owner=${DB_USER}
