--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,9 +7,9 @@ flavorMate.app.version=@project.version@
 flavorMate.highlight.days=${FLAVORMATE_HIGHLIGHT_COUNT:14}
 flavorMate.mail.from=${MAIL_FROM}
 ## Features
-flavormate.features.registration.enabled=true
-flavormate.features.recovery.enabled=true
-flavormate.features.story.enabled=true
+flavormate.features.registration.enabled=${FLAVORMATE_FEATURE_REGISTRATION:false}
+flavormate.features.recovery.enabled=${FLAVORMATE_FEATURE_RECOVERY:false}
+flavormate.features.story.enabled=${FLAVORMATE_FEATURE_STORY:true}
 flavormate.features.import-export.enabled=false
 flavormate.features.share-recipes.enabled=false
 ## Admin Config
