--- a/example/.env.template
+++ b/example/.env.template
@@ -12,6 +12,7 @@ FLAVORMATE_FRONTEND_URL=http://localhost
 FLAVORMATE_FEATURE_STORY=
 FLAVORMATE_FEATURE_RECOVERY=
 FLAVORMATE_FEATURE_REGISTRATION=
+FLAVORMATE_FEATURE_BRING=
 
 # Admin Account
 FLAVORMATE_ADMIN_USERNAME=
