- Fixed mail from

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ flavorMate.base.backend=${FLAVORMATE_BACKEND_URL}${FLAVORMATE_PATH:}
 flavorMate.base.frontend=${FLAVORMATE_FRONTEND_URL:}
 flavorMate.app.version=@project.version@
 flavorMate.highlight.days=${FLAVORMATE_HIGHLIGHT_COUNT:14}
-flavorMate.mail.from=${MAIL_FROM}
+flavorMate.mail.from=${MAIL_FROM:}
 ## Features
 flavormate.features.registration.enabled=${FLAVORMATE_FEATURE_REGISTRATION:false}
 flavormate.features.recovery.enabled=${FLAVORMATE_FEATURE_RECOVERY:false}
