--- a/example/.env.minimal-template
+++ b/example/.env.minimal-template
@@ -1,5 +1,8 @@
-FLAVORMATE_DATA_PATH=file:/opt/files
+# Paths
+FLAVORMATE_PATH_CONTENT=file:/opt/files
 
+#General
+FLAVORMATE_LANGUAGE=
 FLAVORMATE_BACKEND_URL=http://localhost
 FLAVORMATE_FRONTEND_URL=http://localhost
 
