--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,9 @@
 # FlavorMate Config
-flavorMate.files=${FLAVORMATE_DATA_PATH:file:${user.home}/.flavormate/files}
-flavorMate.files-backup=${FLAVORMATE_BACKUP_PATH:file:${user.home}/.flavormate/backup}
-flavorMate.base.backend=${FLAVORMATE_BACKEND_URL}${FLAVORMATE_PATH:}
-flavorMate.base.frontend=${FLAVORMATE_FRONTEND_URL:}
-flavorMate.app.version=@project.version@
-flavorMate.highlight.days=${FLAVORMATE_HIGHLIGHT_COUNT:14}
-flavorMate.mail.from=${MAIL_FROM:}
+## General Config
+flavormate.common.backend-url=${FLAVORMATE_BACKEND_URL}${FLAVORMATE_PATH:}
+flavorMate.common.frontend-url=${FLAVORMATE_FRONTEND_URL:}
+flavormate.common.preferred-language=${FLAVORMATE_LANGUAGE:en}
+flavorMate.common.version=@project.version@
 ## Features
 flavormate.features.registration.enabled=${FLAVORMATE_FEATURE_REGISTRATION:false}
 flavormate.features.recovery.enabled=${FLAVORMATE_FEATURE_RECOVERY:false}
@@ -13,11 +11,19 @@ flavormate.features.story.enabled=${FLAVORMATE_FEATURE_STORY:true}
 flavormate.features.bring.enabled=${FLAVORMATE_FEATURE_BRING:true}
 flavormate.features.import-export.enabled=false
 flavormate.features.share-recipes.enabled=false
+## Paths
+flavormate.paths.backup=${FLAVORMATE_PATH_BACKUP:file:${user.home}/.flavormate/backup}
+flavormate.paths.content=${FLAVORMATE_PATH_CONTENT:file:${user.home}/.flavormate/files}
+flavormate.paths.logs=${FLAVORMATE_PATH_LOG:file:${user.home}/.flavormate/logs}
+## Misc Config
+flavormate.misc.highlight_days=${FLAVORMATE_HIGHLIGHT_COUNT:14}
+## Mail Config
+flavormate.mail.from=${MAIL_FROM:}
 ## Admin Config
-flavorMate.admin.username=${FLAVORMATE_ADMIN_USERNAME}
-flavorMate.admin.displayname=${FLAVORMATE_ADMIN_DISPLAYNAME}
-flavorMate.admin.mail=${FLAVORMATE_ADMIN_MAIL}
-flavorMate.admin.password=${FLAVORMATE_ADMIN_PASSWORD}
+flavormate.admin-user.username=${FLAVORMATE_ADMIN_USERNAME}
+flavormate.admin-user.display-name=${FLAVORMATE_ADMIN_DISPLAYNAME}
+flavormate.admin-user.mail=${FLAVORMATE_ADMIN_MAIL}
+flavormate.admin-user.password=${FLAVORMATE_ADMIN_PASSWORD}
 # Server Config
 ## Spring Config
 spring.application.name=FlavorMate
