--- a/example/.env.template
+++ b/example/.env.template
@@ -1,10 +1,10 @@
-FLAVORMATE_DATA_PATH=file:/opt/files
-
 FLAVORMATE_PORT=8095
 FLAVORMATE_HIGHLIGHT_COUNT=14
 FLAVORMATE_PATH=/api
 FLAVORMATE_JWT_TOKEN=/opt/app/secret.key
 
+# General
+FLAVORMATE_LANGUAGE=
 FLAVORMATE_BACKEND_URL=http://localhost
 FLAVORMATE_FRONTEND_URL=http://localhost
 
@@ -13,6 +13,11 @@ FLAVORMATE_FEATURE_STORY=
 FLAVORMATE_FEATURE_RECOVERY=
 FLAVORMATE_FEATURE_REGISTRATION=
 FLAVORMATE_FEATURE_BRING=
+
+# Paths
+FLAVORMATE_PATH_BACKUP=
+FLAVORMATE_PATH_CONTENT=file:/opt/files
+FLAVORMATE_PATH_LOG=
 
 # Admin Account
 FLAVORMATE_ADMIN_USERNAME=
