--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
     </parent>
     <groupId>de.flavormate</groupId>
     <artifactId>server</artifactId>
-    <version>1.1.2+1</version>
+    <version>2.0.0+1</version>
     <name>FlavorMate</name>
     <description>The backend for FlavorMate</description>
     <properties>
@@ -29,7 +29,11 @@
             <artifactId>postgresql</artifactId>
             <version>42.7.4</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-configuration-processor</artifactId>
+            <optional>true</optional>
+        </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
