- remove mail config from application-release.properties - add mail config to application.properties - add CustomJavaMailSender component - include jakarta.validation-api in dependencies - enhance MailConfig with validation and conditional properties - conditionally enable EmailService with recovery feature

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,6 +18,12 @@ flavormate.paths.logs=${FLAVORMATE_PATH_LOG:file:${user.home}/.flavormate/logs}
 ## Misc Config
 flavormate.misc.highlight_days=${FLAVORMATE_HIGHLIGHT_COUNT:14}
 ## Mail Config
+flavormate.mail.host=${MAIL_HOST:}
+flavormate.mail.port=${MAIL_PORT:587}
+flavormate.mail.auth=${MAIL_AUTH:true}
+flavormate.mail.username=${MAIL_USERNAME:}
+flavormate.mail.password=${MAIL_PASSWORD:}
+flavormate.mail.start-tls=${MAIL_STARTTLS:true}
 flavormate.mail.from=${MAIL_FROM:}
 ## Admin Config
 flavormate.admin-user.username=${FLAVORMATE_ADMIN_USERNAME}
@@ -60,8 +66,6 @@ logging.level.org.apache=WARN
 fraho.jwt.token.hmac=${FLAVORMATE_JWT_TOKEN:/opt/app/secret.key}
 fraho.jwt.token.expiration=8 weeks
 fraho.jwt.token.path=/auth/login
-# Mail
-spring.mail.host=
 # PostgreSQL
 ## DataSource configuration
 spring.datasource.url=jdbc:postgresql://${DB_HOST}/${DB_DATABASE}
