- Simplify HTML templates - Localize static texts

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -38,6 +38,9 @@ spring.web.resources.static-locations=${flavorMate.files},classpath:/static
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
 spring.main.banner-mode=off
+spring.messages.basename=language/messages
+spring.messages.encoding=UTF-8
+spring.messages.fallback-to-system-locale=false
 ## Server Config
 server.forward-headers-strategy=native
 server.port=${FLAVORMATE_PORT:8095}
