--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -76,6 +76,7 @@ spring.datasource.username=${DB_USER}
 spring.datasource.password=${DB_PASSWORD}
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 # FlyWay
+spring.flyway.baseline-version=1.0.2
 spring.flyway.baseline-on-migrate=true
 spring.flyway.validateMigrationNaming=true
 spring.flyway.placeholders.owner=${DB_USER}
