--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -34,7 +34,7 @@ flavormate.admin-user.password=${FLAVORMATE_ADMIN_PASSWORD}
 ## Spring Config
 spring.application.name=FlavorMate
 spring.jackson.date-format=yyyy-MM-dd
-spring.web.resources.static-locations=${flavorMate.files},classpath:/static
+spring.web.resources.static-locations=${flavormate.paths.content},classpath:/static
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
 spring.main.banner-mode=off
