- Update backend Docker image to version 2 - Add language options to .env templates - Add Open Food Facts feature flag to .env template

--- a/example/.env.template
+++ b/example/.env.template
@@ -4,7 +4,7 @@ FLAVORMATE_PATH=/api
 FLAVORMATE_JWT_TOKEN=/opt/app/secret.key
 
 # General
-FLAVORMATE_LANGUAGE=
+FLAVORMATE_LANGUAGE= # de / en
 FLAVORMATE_BACKEND_URL=http://localhost
 FLAVORMATE_FRONTEND_URL=http://localhost
 
@@ -13,6 +13,7 @@ FLAVORMATE_FEATURE_STORY=
 FLAVORMATE_FEATURE_RECOVERY=
 FLAVORMATE_FEATURE_REGISTRATION=
 FLAVORMATE_FEATURE_BRING=
+FLAVORMATE_FEATURE_OPEN-FOOD-FACTS=
 
 # Paths
 FLAVORMATE_PATH_BACKUP=
