--- a/example/.env.minimal-template
+++ b/example/.env.minimal-template
@@ -2,7 +2,7 @@
 FLAVORMATE_PATH_CONTENT=file:/opt/files
 
 #General
-FLAVORMATE_LANGUAGE=
+FLAVORMATE_LANGUAGE= # de / en
 FLAVORMATE_BACKEND_URL=http://localhost
 FLAVORMATE_FRONTEND_URL=http://localhost
 
