- Add open-food-facts feature flag in properties - Update FeaturesConfig to include open-food-facts

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,6 +9,7 @@ flavormate.features.registration.enabled=${FLAVORMATE_FEATURE_REGISTRATION:false
 flavormate.features.recovery.enabled=${FLAVORMATE_FEATURE_RECOVERY:false}
 flavormate.features.story.enabled=${FLAVORMATE_FEATURE_STORY:true}
 flavormate.features.bring.enabled=${FLAVORMATE_FEATURE_BRING:true}
+flavormate.features.open-food-facts.enabled=${FLAVORMATE_FEATURE_OPEN-FOOD-FACTS:false}
 flavormate.features.import-export.enabled=false
 flavormate.features.share-recipes.enabled=false
 ## Paths
