- Update `MAIL_FROM` in .env template - Adjust email "from" format in `MailService.java`

--- a/example/.env.template
+++ b/example/.env.template
@@ -33,7 +33,7 @@ DB_PASSWORD=
 DB_DATABASE=
 
 # Mail
-MAIL_FROM=FlavorMate <noreply@foo.de>
+MAIL_FROM=noreply@example.com
 MAIL_HOST=
 MAIL_PORT=
 MAIL_USERNAME=
