--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,8 +7,8 @@ flavorMate.common.version=@project.version@
 ## Features
 flavormate.features.registration.enabled=${FLAVORMATE_FEATURE_REGISTRATION:false}
 flavormate.features.recovery.enabled=${FLAVORMATE_FEATURE_RECOVERY:false}
-flavormate.features.story.enabled=${FLAVORMATE_FEATURE_STORY:true}
-flavormate.features.bring.enabled=${FLAVORMATE_FEATURE_BRING:true}
+flavormate.features.story.enabled=${FLAVORMATE_FEATURE_STORY:false}
+flavormate.features.bring.enabled=${FLAVORMATE_FEATURE_BRING:false}
 flavormate.features.open-food-facts.enabled=${FLAVORMATE_FEATURE_OPEN-FOOD-FACTS:false}
 flavormate.features.import-export.enabled=false
 flavormate.features.share-recipes.enabled=false
@@ -67,7 +67,7 @@ logging.level.org.springframework=WARN
 logging.level.eu.fraho=WARN
 logging.level.org.apache=WARN
 # JWT
-fraho.jwt.token.hmac=${FLAVORMATE_JWT_TOKEN:/opt/app/secret.key}
+fraho.jwt.token.hmac=${FLAVORMATE_JWT_TOKEN:file:${user.home}/.flavormate/secret.key}
 fraho.jwt.token.expiration=8 weeks
 fraho.jwt.token.path=/auth/login
 # PostgreSQL
