--- a/example/.env.minimal-template
+++ b/example/.env.minimal-template
@@ -1,10 +1,13 @@
 # Paths
+FLAVORMATE_PATH_BACKUP=file:/opt/backup
 FLAVORMATE_PATH_CONTENT=file:/opt/files
+FLAVORMATE_PATH_LOG=file:/opt/logs
+
+FLAVORMATE_JWT_TOKEN=/opt/app/secret.key
 
 #General
 FLAVORMATE_LANGUAGE= # de / en
 FLAVORMATE_BACKEND_URL=http://localhost
-FLAVORMATE_FRONTEND_URL=http://localhost
 
 # Admin Account
 FLAVORMATE_ADMIN_USERNAME=
