--- a/example/.env.template
+++ b/example/.env.template
@@ -6,7 +6,7 @@ FLAVORMATE_JWT_TOKEN=/opt/app/secret.key
 # General
 FLAVORMATE_LANGUAGE= # de / en
 FLAVORMATE_BACKEND_URL=http://localhost
-FLAVORMATE_FRONTEND_URL=http://localhost
+FLAVORMATE_FRONTEND_URL=
 
 # Features
 FLAVORMATE_FEATURE_STORY=
@@ -16,9 +16,9 @@ FLAVORMATE_FEATURE_BRING=
 FLAVORMATE_FEATURE_OPEN-FOOD-FACTS=
 
 # Paths
-FLAVORMATE_PATH_BACKUP=
+FLAVORMATE_PATH_BACKUP=file:/opt/backup
 FLAVORMATE_PATH_CONTENT=file:/opt/files
-FLAVORMATE_PATH_LOG=
+FLAVORMATE_PATH_LOG=file:/opt/logs
 
 # Admin Account
 FLAVORMATE_ADMIN_USERNAME=
@@ -33,7 +33,7 @@ DB_PASSWORD=
 DB_DATABASE=
 
 # Mail
-MAIL_FROM=noreply@example.com
+MAIL_FROM=
 MAIL_HOST=
 MAIL_PORT=
 MAIL_USERNAME=
