- Add FLAVORMATE_PORT to .env.minimal-template - Add FLAVORMATE_PATH to .env.minimal-template

--- a/example/.env.minimal-template
+++ b/example/.env.minimal-template
@@ -3,6 +3,9 @@ FLAVORMATE_PATH_BACKUP=file:/opt/backup
 FLAVORMATE_PATH_CONTENT=file:/opt/files
 FLAVORMATE_PATH_LOG=file:/opt/logs
 
+# General
+FLAVORMATE_PORT=8095
+FLAVORMATE_PATH=
 FLAVORMATE_JWT_TOKEN=/opt/app/secret.key
 
 #General
