--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,8 +10,8 @@ flavormate.features.recovery.enabled=${FLAVORMATE_FEATURE_RECOVERY:false}
 flavormate.features.story.enabled=${FLAVORMATE_FEATURE_STORY:false}
 flavormate.features.bring.enabled=${FLAVORMATE_FEATURE_BRING:false}
 flavormate.features.open-food-facts.enabled=${FLAVORMATE_FEATURE_OPEN_FOOD_FACTS:false}
+flavormate.features.share.enabled=${FLAVORMATE_FEATURE_SHARE:false}
 flavormate.features.import-export.enabled=false
-flavormate.features.share-recipes.enabled=false
 ## Paths
 flavormate.paths.backup=${FLAVORMATE_PATH_BACKUP:file:${user.home}/.flavormate/backup}
 flavormate.paths.content=${FLAVORMATE_PATH_CONTENT:file:${user.home}/.flavormate/files}
