- added property to define share duration - added docs

--- a/example/.env.template
+++ b/example/.env.template
@@ -16,6 +16,9 @@ FLAVORMATE_FEATURE_BRING=
 FLAVORMATE_FEATURE_OPEN_FOOD_FACTS=
 FLAVORMATE_FEATURE_SHARE=
 
+# Share
+FLAVORMATE_SHARE_DURATION=
+
 # Paths
 FLAVORMATE_PATH_BACKUP=file:/opt/backup
 FLAVORMATE_PATH_CONTENT=file:/opt/files
