--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,6 +18,7 @@ flavormate.paths.content=${FLAVORMATE_PATH_CONTENT:file:${user.home}/.flavormate
 flavormate.paths.logs=${FLAVORMATE_PATH_LOG:file:${user.home}/.flavormate/logs}
 ## Misc Config
 flavormate.misc.highlight_days=${FLAVORMATE_HIGHLIGHT_COUNT:14}
+flavormate.misc.share-duration=${FLAVORMATE_SHARE_DURATION:}
 ## Mail Config
 flavormate.mail.host=${MAIL_HOST:}
 flavormate.mail.port=${MAIL_PORT:587}
