feature/deep-linking (#16)
- added 'share' feature
- added mdui (v. 2.1.3)
- added public recipe site
- added property to define share duration
- added docs

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,14 +10,15 @@ flavormate.features.recovery.enabled=${FLAVORMATE_FEATURE_RECOVERY:false}
 flavormate.features.story.enabled=${FLAVORMATE_FEATURE_STORY:false}
 flavormate.features.bring.enabled=${FLAVORMATE_FEATURE_BRING:false}
 flavormate.features.open-food-facts.enabled=${FLAVORMATE_FEATURE_OPEN_FOOD_FACTS:false}
+flavormate.features.share.enabled=${FLAVORMATE_FEATURE_SHARE:false}
 flavormate.features.import-export.enabled=false
-flavormate.features.share-recipes.enabled=false
 ## Paths
 flavormate.paths.backup=${FLAVORMATE_PATH_BACKUP:file:${user.home}/.flavormate/backup}
 flavormate.paths.content=${FLAVORMATE_PATH_CONTENT:file:${user.home}/.flavormate/files}
 flavormate.paths.logs=${FLAVORMATE_PATH_LOG:file:${user.home}/.flavormate/logs}
 ## Misc Config
 flavormate.misc.highlight_days=${FLAVORMATE_HIGHLIGHT_COUNT:14}
+flavormate.misc.share-duration=${FLAVORMATE_SHARE_DURATION:}
 ## Mail Config
 flavormate.mail.host=${MAIL_HOST:}
 flavormate.mail.port=${MAIL_PORT:587}
