--- a/example/.env.template
+++ b/example/.env.template
@@ -14,6 +14,10 @@ FLAVORMATE_FEATURE_RECOVERY=
 FLAVORMATE_FEATURE_REGISTRATION=
 FLAVORMATE_FEATURE_BRING=
 FLAVORMATE_FEATURE_OPEN_FOOD_FACTS=
+FLAVORMATE_FEATURE_SHARE=
+
+# Share
+FLAVORMATE_SHARE_DURATION=
 
 # Paths
 FLAVORMATE_PATH_BACKUP=file:/opt/backup
