- Added layers to docker image

--- a/pom.xml
+++ b/pom.xml
@@ -124,6 +124,9 @@
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-maven-plugin</artifactId>
         <configuration>
+          <layers>
+            <enabled>true</enabled>
+          </layers>
           <excludes>
             <exclude>
               <groupId>org.projectlombok</groupId>
