--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -40,6 +40,9 @@ quarkus:
     host: 0.0.0.0
     root-path: ${flavormate.server.path}
     port: ${flavormate.server.port}
+    cors:
+      enabled: true
+      origins: ${flavormate.server.cors-allowed-origins}
 
   devservices:
     enabled: false
@@ -84,6 +87,7 @@ flavormate:
     url: ${FLAVORMATE_SERVER_URL}
     path: ${FLAVORMATE_SERVER_PATH:/}
     port: ${FLAVORMATE_SERVER_PORT:8080}
+    cors-allowed-origins: ${FLAVORMATE_SERVER_CORS_ALLOWED_ORIGINS}
 
   general:
     admin:
