- Add support for OIDC token exchange - Update OIDC provider DTO to include `redirectUri` - Add `/exchange-code` and `/mobile-redirect` endpoints to OIDC controller - Bump version to 3.3.0

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -162,5 +162,6 @@ flavormate:
   #        client-id:
   #        id: authentik
   #        icon: authentik.png
+  #        redirect-uri-override:
 
   # Paths
