- Updated OIDC configuration - Added OIDC provider table to database

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -124,6 +124,8 @@ flavormate:
       enabled: ${FLAVORMATE_FEATURE_BRING:false}
     enhanced-resolutions:
       enabled: true
+    oidc2:
+      enabled: true
     open-food-facts:
       enabled: ${FLAVORMATE_FEATURE_OPEN_FOOD_FACTS:false}
     share:
