- Added account_session and token endpoints / services

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -32,8 +32,7 @@ quarkus:
 
   # Log settings
   log:
-    console:
-      level: INFO
+    level: INFO
 
   http:
     test-port: 0
@@ -130,6 +129,8 @@ flavormate:
       enabled: ${FLAVORMATE_FEATURE_OPEN_FOOD_FACTS:false}
     share:
       enabled: ${FLAVORMATE_FEATURE_SHARE:false}
+    token:
+      enabled: true
 
   mailer:
     from: ${FLAVORMATE_MAILER_FROM}
